--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button type="button" class="send-code j-send-code" data-operation="sendCode">Send</button>
+                                <button type="submit" class="send-code j-send-code" data-operation="sendCode">Send</button>
                             </div>
                         </div>
 
